--- a/DeviceLockController/res/values-te/strings.xml
+++ b/DeviceLockController/res/values-te/strings.xml
@@ -49,7 +49,7 @@
     <string name="download_kiosk_app" msgid="1845089944897502656">"Kiosk యాప్ ఆటోమేటిక్‌గా డౌన్‌లోడ్ అయి, ఇన్‌స్టాల్ అవుతుంది"</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"ఈ యూజర్ కోసం కియోస్క్ యాప్ ఇన్‌స్టాల్ అవుతుంది"</string>
     <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"మీరు పేమెంట్‌ను మిస్ చేస్తే, <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ఈ పరికరంపై పరిమితి విధించవచ్చు"</string>
-    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"మీరు అవసరమైన పేమెంట్‌లు చేయకపోతే <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ఈ పరికరంపై పరిమితి విధించవచ్చు. వివరాల కోసం, <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>నిబంధనలు &amp; కండిషన్‌లను<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g> చూడండి."</string>
+    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"మీరు అవసరమైన పేమెంట్‌లు చేయకపోతే <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ఈ పరికరంపై పరిమితి విధించవచ్చు. వివరాల కోసం, <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>నియమాలు &amp; షరతులు<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g> చూడండి."</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"ఓనర్ పేమెంట్‌లు చేయకపోతే <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ఈ పరికరంపై పరిమితి విధించవచ్చు"</string>
     <string name="previous" msgid="5241891780917802570">"మునుపటి"</string>
     <string name="next" msgid="8248291863254324326">"తర్వాత"</string>
@@ -60,8 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"సమాచారం"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"కేటాయింపు సమాచారం"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"మీ పరికరాన్ని ఎన్‌రోల్ చేయండి"</string>
-    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
-    <skip />
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"మీరు ఇప్పుడు మీ పరికరాన్ని <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ఫైనాన్స్ ప్రోగ్రామ్‌లో ఎన్‌రోల్ చేయవచ్చు"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"మీరు మీ పరికరాన్ని <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> సబ్సిడీ ప్రోగ్రామ్‌లో ఎన్‌రోల్ చేయవచ్చు"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"మీరు <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> సబ్సిడీ ప్రోగ్రామ్‌లో ఉన్నారు"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"పరికర ఎన్‌రోల్‌మెంట్"</string>
