--- a/DeviceLockController/res/values-af/strings.xml
+++ b/DeviceLockController/res/values-af/strings.xml
@@ -31,14 +31,14 @@
     <string name="try_again" msgid="5964839819170927721">"Probeer weer"</string>
     <string name="reset_phone" msgid="1161657350311160627">"Stel foon terug"</string>
     <string name="control_section_title" msgid="2213476068991045785">"Wat kan <xliff:g id="CREDITOR_APP">%1$s</xliff:g> doen?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"Beperk hierdie toestel as jy nie ’n betaling doen nie"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"Laai die <xliff:g id="CREDITOR_APP">%1$s</xliff:g>-app af, installeer dit, en dateer dit op"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"Skakel ontfoutingkenmerke af"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"Hierdie toestel beperk as jy nie ’n betaling doen nie"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"Die <xliff:g id="CREDITOR_APP">%1$s</xliff:g>-app aflaai, installeer en opdateer"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"Ontfoutingkenmerke afskakel"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"Wat werk terwyl hierdie toestel gesluit is?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Noodoproepdienste"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Inkomende en sekere uitgaande oproepe"</string>
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"Instellings"</string>
-    <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;Rugsteun en stel jou&lt;/a&gt; data terug"</string>
+    <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;Rugsteun en terugstel van&lt;/a&gt; jou data"</string>
     <string name="exposure_section_title" msgid="2329122144337528752">"Wat kan <xliff:g id="CREDITOR_APP">%1$s</xliff:g> sien?"</string>
     <string name="exposure_install_text" msgid="2631074166447765453">"Wanneer die <xliff:g id="CREDITOR_APP">%1$s</xliff:g>-app geïnstalleer of gedeïnstalleer word"</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"Enige sluit- of ontsluitversoeke deur <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
