--- a/DeviceLockController/res/values-bn/strings.xml
+++ b/DeviceLockController/res/values-bn/strings.xml
@@ -31,8 +31,8 @@
     <string name="try_again" msgid="5964839819170927721">"আবার চেষ্টা করুন"</string>
     <string name="reset_phone" msgid="1161657350311160627">"ফোন রিসেট করুন"</string>
     <string name="control_section_title" msgid="2213476068991045785">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> অ্যাপটি কী কী করতে পারবে?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"পেমেন্ট না করলে এই ডিভাইসের ব্যবহার সীমিত করা হবে"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> অ্যাপ ডাউনলোড, ইনস্টল ও আপডেট করুন"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"পেমেন্ট না করলে এই ডিভাইসের ব্যবহার সীমিত করা"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> অ্যাপ ডাউনলোড, ইনস্টল ও আপডেট করা"</string>
     <string name="control_disable_debug_text" msgid="8112443250013094442">"ডিবাগিং ফিচার বন্ধ করা"</string>
     <string name="locked_section_title" msgid="2748725389334076510">"এই ডিভাইসটি লক করা থাকলেও কী কী কাজ করতে পারে?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"জরুরি কল সংক্রান্ত পরিষেবা"</string>
@@ -60,8 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"তথ্য"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"প্রভিশন তথ্য"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"আপনার ডিভাইস এনরোল করুন"</string>
-    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
-    <skip />
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"আপনি এখন <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>-এর ফাইন্যান্স প্রোগ্রামে নিজের ডিভাইস এনরোল করতে পারবেন"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"আপনি এখন <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>-এর সাবসিডি প্রোগ্রামে এনরোল করতে পারবেন"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"আপনি <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>-এর সাবসিডি প্রোগ্রামে রয়েছেন"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"ডিভাইস এনরোলমেন্ট"</string>
