--- a/DeviceLockController/res/values-bs/strings.xml
+++ b/DeviceLockController/res/values-bs/strings.xml
@@ -46,7 +46,7 @@
     <string name="open_source_licenses" msgid="6464389386262455443">"Licence otvorenog koda"</string>
     <string name="footer_notice_content_description" msgid="2160540400079419440">"Mogućnosti upravljanja u odjeljku finansiranog uređaja u postavkama sigurnosti se ne primjenjuju na ovaj uređaj."</string>
     <string name="device_provided_by_provider" msgid="290593329676291991">"Ovaj uređaj pruža <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
-    <string name="download_kiosk_app" msgid="1845089944897502656">"Aplikacija Kiosk će se preuzeti i instalirati automatski"</string>
+    <string name="download_kiosk_app" msgid="1845089944897502656">"Automatski će se preuzeti i instalirati aplikacija Kiosk"</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"Aplikacija Kiosk će se instalirati za ovog korisnika"</string>
     <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> može ograničiti ovaj uređaj ako propustite plaćanje"</string>
     <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> može ograničiti ovaj uređaj ako ne izvršite potrebna plaćanja. Za detalje pogledajte <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Uslove i odredbe<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>."</string>
@@ -56,13 +56,13 @@
     <string name="start" msgid="2842214844667658537">"Započnite"</string>
     <string name="ok" msgid="3568398726528719749">"UREDU"</string>
     <string name="done" msgid="4507782734740410307">"Gotovo"</string>
-    <string name="do_it_in_one_hour" msgid="2727777340568739453">"Izvrši za 1 sat"</string>
+    <string name="do_it_in_one_hour" msgid="2727777340568739453">"Odgodi 1 sat"</string>
     <string name="header_icon_content_description" msgid="6069602031334473195">"Informacije"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Inf. o pružanju usluge"</string>
-    <string name="enroll_your_device_header" msgid="2226305405591945098">"Prijavite uređaj"</string>
-    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Svoj uređaj sada možete prijaviti u financijski program davatelja usluge <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
-    <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Sada možete prijaviti uređaj u program subvencioniranja koji pruža <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
-    <string name="subsidy_program_header" msgid="2321508488856303554">"Sad ste u programu subvencija koji pruža <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <string name="enroll_your_device_header" msgid="2226305405591945098">"Registrirajte uređaj"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Sada možete registrirati uređaj u program finansiranja koji pruža <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Sada možete registrirati uređaj u program subvencija koji pruža <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <string name="subsidy_program_header" msgid="2321508488856303554">"U programu ste subvencija koji pruža <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Prijava uređaja"</string>
     <string name="device_financing_enrollment_body_text" msgid="5506086383249511498">"Uređaj će se prijaviti u program finansiranja koji pruža <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> unutar 30 dana"</string>
     <string name="device_subsidy_enrollment_body_text" msgid="3971584929178719388">"Uređaj će se prijaviti u program subvencioniranja koji pruža <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> unutar 30 dana"</string>
