--- a/DeviceLockController/res/values-es-rUS/strings.xml
+++ b/DeviceLockController/res/values-es-rUS/strings.xml
@@ -21,7 +21,7 @@
     <string name="next_button" msgid="1856423430963548653">"Siguiente"</string>
     <string name="reset_button" msgid="4649354411129240809">"Restablecer"</string>
     <string name="setup_more_button" msgid="4456370972302510109">"Más"</string>
-    <string name="setup_info_title_text" msgid="299562193092219293">"Cómo <xliff:g id="CREDITOR_APP">%1$s</xliff:g> administra este dispositivo"</string>
+    <string name="setup_info_title_text" msgid="299562193092219293">"Cómo administra este dispositivo <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
     <string name="setup_failed_title_text" msgid="9045111389981992536">"No se puede instalar la app de <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
     <string name="setup_failed_reset_device_text" msgid="178419033440060908">"Restableciendo el dispositivo para volver a intentarlo."</string>
     <string name="setup_failed_reset_device_timer_text" msgid="5270970227714985986">"{count,plural, =1{Restablece este dispositivo y vuelve a configurarlo. Se restablecerá automáticamente en 1 segundo.}other{Restablece este dispositivo y vuelve a configurarlo. Se restablecerá automáticamente en # segundos.}}"</string>
@@ -56,7 +56,7 @@
     <string name="start" msgid="2842214844667658537">"Iniciar"</string>
     <string name="ok" msgid="3568398726528719749">"Aceptar"</string>
     <string name="done" msgid="4507782734740410307">"Listo"</string>
-    <string name="do_it_in_one_hour" msgid="2727777340568739453">"Hazlo en 1 hora"</string>
+    <string name="do_it_in_one_hour" msgid="2727777340568739453">"Posponer 1 hora"</string>
     <string name="header_icon_content_description" msgid="6069602031334473195">"Información"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Datos de provisión"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Inscribe tu dispositivo"</string>
