--- a/DeviceLockController/res/values-et/strings.xml
+++ b/DeviceLockController/res/values-et/strings.xml
@@ -60,10 +60,9 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Teave"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Pakkumise teave"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Registreerige seade"</string>
-    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
-    <skip />
-    <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Saate nüüd registreerida oma seadme pakkuja <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> toetusprogrammi"</string>
-    <string name="subsidy_program_header" msgid="2321508488856303554">"Olete pakkuja <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> toetusprogrammis"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Saate nüüd registreerida oma seadme teenusepakkuja <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> järelmaksuprogrammi"</string>
+    <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Saate nüüd registreerida oma seadme teenusepakkuja <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> toetusprogrammi"</string>
+    <string name="subsidy_program_header" msgid="2321508488856303554">"Olete teenusepakkuja <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> toetusprogrammis"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Seadme registreerimine"</string>
     <string name="device_financing_enrollment_body_text" msgid="5506086383249511498">"Teie seade registreeritakse pakkuja <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> järelmaksuprogrammi 30 päeva jooksul"</string>
     <string name="device_subsidy_enrollment_body_text" msgid="3971584929178719388">"Teie seade registreeritakse pakkuja <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> toetusprogrammi 30 päeva jooksul"</string>
