--- a/DeviceLockController/res/values-eu/strings.xml
+++ b/DeviceLockController/res/values-eu/strings.xml
@@ -31,9 +31,9 @@
     <string name="try_again" msgid="5964839819170927721">"Saiatu berriro"</string>
     <string name="reset_phone" msgid="1161657350311160627">"Berrezarri telefonoa"</string>
     <string name="control_section_title" msgid="2213476068991045785">"Zer egin dezake <xliff:g id="CREDITOR_APP">%1$s</xliff:g> aplikazioak?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"Ordainketa egin ezean, gailua murriztu"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> aplikazioa deskargatu, instalatu eta eguneratu"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"Arazketa-eginbideak desaktibatu"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"Ordainketa egin ezean, gailua murriztu."</string>
+    <string name="control_download_text" msgid="8514650561843088172">"<xliff:g id="CREDITOR_APP">%1$s</xliff:g> aplikazioa deskargatu, instalatu eta eguneratu."</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"Arazketa-eginbideak desaktibatu."</string>
     <string name="locked_section_title" msgid="2748725389334076510">"Zerk funtzionatzen du gailua blokeatuta dagoenean?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"Larrialdi-deien zerbitzuak"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Sarrerako deiak eta irteerako dei batzuk"</string>
@@ -46,9 +46,9 @@
     <string name="open_source_licenses" msgid="6464389386262455443">"Kode irekiko lizentziak"</string>
     <string name="footer_notice_content_description" msgid="2160540400079419440">"Segurtasun-ezarpenetako gailu finantzatuaren ataleko kudeaketa-gaitasunak ez dira gailu honetan aplikagarriak."</string>
     <string name="device_provided_by_provider" msgid="290593329676291991">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> hornitzaileak eman du gailu hau"</string>
-    <string name="download_kiosk_app" msgid="1845089944897502656">"Kiosko-aplikazioa automatikoki deskargatu eta instalatuko da"</string>
+    <string name="download_kiosk_app" msgid="1845089944897502656">"Kiosko-aplikazioa automatikoki deskargatu eta instalatuko da."</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"Erabiltzaile horri kiosko-aplikazioa instalatuko zaio"</string>
-    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"Ordainketaren bat egiten ez baduzu, baliteke <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> hornitzaileak gailua murriztea"</string>
+    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"Ordainketaren bat egiten ez baduzu, baliteke <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> hornitzaileak gailua murriztea."</string>
     <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"Beharrezko ordainketak egiten ez badituzu, baliteke <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> hornitzaileak gailua murriztea. Xehetasunak lortzeko, ikusi <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Zehaztapenak eta baldintzak<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>."</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"Jabeak ordainketak egiten ez baditu, baliteke <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> hornitzaileak gailua murriztea"</string>
     <string name="previous" msgid="5241891780917802570">"Aurrekoa"</string>
@@ -60,8 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Informazioa"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Hornikuntza-informazioa"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Erregistratu gailua"</string>
-    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
-    <skip />
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Orain, <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> hornitzailearen dirulaguntza-programan erregistra dezakezu gailua"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Orain, gailua <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> hornitzailearen dirulaguntza-programan erregistra dezakezu"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> hornitzailearen dirulaguntza-programan zaude"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Gailuaren erregistroa"</string>
