--- a/DeviceLockController/res/values-gl/strings.xml
+++ b/DeviceLockController/res/values-gl/strings.xml
@@ -60,17 +60,16 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Información"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Info de provisión"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Inscribe o teu dispositivo"</string>
-    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
-    <skip />
-    <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Xa podes inscribir o dispositivo no programa de subvencións de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
-    <string name="subsidy_program_header" msgid="2321508488856303554">"Estás no programa de subvencións de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Xa podes inscribir o dispositivo no programa de financiamento de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Xa podes inscribir o dispositivo no programa bonificado de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <string name="subsidy_program_header" msgid="2321508488856303554">"Estás no programa bonificado de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Inscrición do dispositivo"</string>
     <string name="device_financing_enrollment_body_text" msgid="5506086383249511498">"O dispositivo inscribirase no programa de finanzas de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> dentro de 30 días"</string>
-    <string name="device_subsidy_enrollment_body_text" msgid="3971584929178719388">"O dispositivo inscribirase no programa de subvencións de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> dentro de 30 días"</string>
+    <string name="device_subsidy_enrollment_body_text" msgid="3971584929178719388">"O dispositivo inscribirase no programa bonificado de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> dentro de 30 días"</string>
     <string name="device_enrollment_notification_body_text" msgid="8755080244956655854">"A inscrición retomarase a esta hora: <xliff:g id="TIME">%1$s</xliff:g>. Podes seguir usando o dispositivo."</string>
     <string name="continue_using_device" msgid="5816570734692191190">"Podes seguir usando o dispositivo"</string>
     <string name="device_paid" msgid="6606280698381856804">"Xa pagaches o dispositivo"</string>
-    <string name="device_removed_from_subsidy_program" msgid="1243434945619071051">"O dispositivo quitouse do programa de subvencións de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
+    <string name="device_removed_from_subsidy_program" msgid="1243434945619071051">"O dispositivo quitouse do programa bonificado de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_removed_from_finance_program" msgid="825548999540107578">"O dispositivo quitouse do programa de finanzas de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="restrictions_lifted" msgid="5785586265984319396">"Levantáronse todas as restricións aplicadas ao dispositivo"</string>
     <string name="uninstall_kiosk_app" msgid="3459557395024053988">"Podes desinstalar a aplicación de quiosco desde o dispositivo"</string>
