--- a/DeviceLockController/res/values-ka/strings.xml
+++ b/DeviceLockController/res/values-ka/strings.xml
@@ -31,14 +31,14 @@
     <string name="try_again" msgid="5964839819170927721">"ხელახლა ცდა"</string>
     <string name="reset_phone" msgid="1161657350311160627">"ტელეფონის გადაყენება"</string>
     <string name="control_section_title" msgid="2213476068991045785">"რისი გაკეთება შეუძლია <xliff:g id="CREDITOR_APP">%1$s</xliff:g>-ს?"</string>
-    <string name="control_lock_device_text" msgid="8253302484073757764">"თუ გადახდას არ აპირებთ, შეზღუდეთ ეს მოწყობილობა"</string>
-    <string name="control_download_text" msgid="8514650561843088172">"ჩამოტვირთეთ, დააინსტალირეთ და განაახლეთ <xliff:g id="CREDITOR_APP">%1$s</xliff:g> აპი"</string>
-    <string name="control_disable_debug_text" msgid="8112443250013094442">"გამორთეთ შეცდომების გამართვის ფუნქციები"</string>
-    <string name="locked_section_title" msgid="2748725389334076510">"რა მუშაობს, თუ ეს მოწყობილობა ჩაკეტილია?"</string>
+    <string name="control_lock_device_text" msgid="8253302484073757764">"შეზღუდოს ეს მოწყობილობა, თუ გადახდას არ განახორციელებთ"</string>
+    <string name="control_download_text" msgid="8514650561843088172">"ჩამოტვირთოს, დააინსტალიროს და განაახლოს <xliff:g id="CREDITOR_APP">%1$s</xliff:g> აპი"</string>
+    <string name="control_disable_debug_text" msgid="8112443250013094442">"გამორთოს შეცდომების გამართვის ფუნქციები"</string>
+    <string name="locked_section_title" msgid="2748725389334076510">"რა იმუშავებს, თუ ეს მოწყობილობა ჩაიკეტება?"</string>
     <string name="locked_emergency_text" msgid="3509216445555779286">"გადაუდებელი ზარის სერვისები"</string>
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"შემომავალი და ზოგიერთი გამავალი ზარი"</string>
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"პარამეტრები"</string>
-    <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;სარეზერვო ასლის შექმნა და აღდგენა&lt;/a&gt;თქვენი მონაცემები"</string>
+    <string name="locked_backup_and_restore_text" msgid="104616318625243429">"თქვენი მონაცემების &lt;a href=https://support.google.com/android/answer/2819582&gt;სარეზერვო ასლის შექმნა/აღდგენა&lt;/a&gt;"</string>
     <string name="exposure_section_title" msgid="2329122144337528752">"რას ხედავს <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
     <string name="exposure_install_text" msgid="2631074166447765453">"როდესაც <xliff:g id="CREDITOR_APP">%1$s</xliff:g> აპი დაინსტალირდება ან დეინსტალირებულია"</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"დაბლოკვის ან განბლოკვის ყველა მოთხოვნა <xliff:g id="CREDITOR_APP">%1$s</xliff:g>-ისგან"</string>
