--- a/DeviceLockController/res/values-ko/strings.xml
+++ b/DeviceLockController/res/values-ko/strings.xml
@@ -60,8 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"정보"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"프로비저닝 정보"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"기기 등록"</string>
-    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
-    <skip />
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"이제 기기를 <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>의 재정 지원 프로그램에 등록할 수 있습니다"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"이제 기기를 <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>의 보조금 프로그램에 등록할 수 있습니다."</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g>의 보조금 프로그램 사용 중"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"기기 등록"</string>
