--- a/DeviceLockController/res/values-lo/strings.xml
+++ b/DeviceLockController/res/values-lo/strings.xml
@@ -60,8 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"ຂໍ້ມູນ"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"ຂໍ້ມູນການຈັດກຽມ"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"ລົງທະບຽນອຸປະກອນຂອງທ່ານ"</string>
-    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
-    <skip />
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"ຕອນນີ້ທ່ານສາມາດລົງທະບຽນອຸປະກອນຂອງທ່ານໃນໂປຣແກຣມສະໜັບສະໜູນທາງການເງິນຂອງ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ໄດ້ແລ້ວ"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"ຕອນນີ້ທ່ານສາມາດລົງທະບຽນອຸປະກອນຂອງທ່ານໃນໂປຣແກຣມສະໜັບສະໜູນທາງການເງິນຂອງ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> ໄດ້ແລ້ວ"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"ທ່ານຢູ່ໃນໂປຣແກຣມສະໜັບສະໜູນທາງການເງິນຂອງ <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"ການລົງທະບຽນອຸປະກອນ"</string>
