--- a/DeviceLockController/res/values-mr/strings.xml
+++ b/DeviceLockController/res/values-mr/strings.xml
@@ -49,7 +49,7 @@
     <string name="download_kiosk_app" msgid="1845089944897502656">"कियोस्क अ‍ॅप आपोआप डाउनलोड आणि इंस्टॉल केले जाईल"</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"या वापरकर्त्यासाठी कियोस्क ॲप इंस्टॉल केले जाईल"</string>
     <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"तुम्ही पेमेंट चुकवल्यास <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> डिव्हाइस प्रतिबंधित करू शकतो"</string>
-    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"तुम्ही आवश्यक पेमेंट न केल्यास <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> डिव्हाइस प्रतिबंधित करू शकतो. तपशिलांसाठी, <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>अटी आणि नियम<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g> पहा."</string>
+    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"तुम्ही आवश्यक पेमेंट न केल्यास <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> डिव्हाइस प्रतिबंधित करू शकतो. तपशिलांसाठी <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>अटी आणि नियम<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g> पहा."</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"मालकाने पेमेंट न केल्यास, <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> डिव्हाइस प्रतिबंधित करू शकतो"</string>
     <string name="previous" msgid="5241891780917802570">"मागील"</string>
     <string name="next" msgid="8248291863254324326">"पुढील"</string>
@@ -60,8 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"माहिती"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"तरतुदीची माहिती"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"तुमच्या डिव्हाइसची नोंदणी करा"</string>
-    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
-    <skip />
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"तुम्ही आता <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> च्या अर्थविषयक प्रोग्राममध्ये तुमच्या डिव्हाइसची नोंदणी करू शकता"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"तुम्ही आता तुमच्या डिव्हाइसची नोंदणी <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> च्या सबसिडीविषयक प्रोग्राममध्ये करू शकता"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"तुम्ही <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> च्या सबसिडी प्रोग्रामवर आहात"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"डिव्हाइसची नोंदणी"</string>
