--- a/DeviceLockController/res/values-nl/strings.xml
+++ b/DeviceLockController/res/values-nl/strings.xml
@@ -60,8 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Info"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Registratie-info"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Je apparaat inschrijven"</string>
-    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
-    <skip />
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Je kunt je apparaat nu inschrijven voor het financieringsprogramma van <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Je kunt je apparaat nu inschrijven voor het subsidieprogramma van <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Je neemt deel aan het subsidieprogramma van <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Apparaatinschrijving"</string>
