--- a/DeviceLockController/res/values-pt-rPT/strings.xml
+++ b/DeviceLockController/res/values-pt-rPT/strings.xml
@@ -49,7 +49,7 @@
     <string name="download_kiosk_app" msgid="1845089944897502656">"A app de quiosque vai ser transferida e instalada automaticamente"</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"A app de quiosque vai ser instalada para este utilizador"</string>
     <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"O fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> pode restringir este dispositivo se falhar um pagamento"</string>
-    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"O fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> pode restringir este dispositivo se não fizer os pagamentos necessários. Para obter detalhes, veja os <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Termos de Utilização<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>."</string>
+    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"O fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> pode restringir este dispositivo se não fizer os pagamentos necessários. Para obter detalhes, veja os <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Termos de Utilização<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>"</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"O fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> pode restringir este dispositivo se o proprietário não fizer os pagamentos"</string>
     <string name="previous" msgid="5241891780917802570">"Anterior"</string>
     <string name="next" msgid="8248291863254324326">"Seguinte"</string>
@@ -60,8 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Informações"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Inf. de aprovision."</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Inscreva o seu dispositivo"</string>
-    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
-    <skip />
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Já pode inscrever o seu dispositivo no programa de financiamento do fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Já pode inscrever o seu dispositivo no programa de subsídio do fornecedor <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Faz parte do programa de subsídio de <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Inscrição do dispositivo"</string>
