--- a/DeviceLockController/res/values-sq/strings.xml
+++ b/DeviceLockController/res/values-sq/strings.xml
@@ -60,8 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Informacione"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Të dhëna: përgatitja"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Regjistro pajisjen tënde"</string>
-    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
-    <skip />
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Tani mund ta regjistrosh pajisjen tënde në programin e financimit të <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Tani mund ta regjistrosh pajisjen tënde në programin e subvencionit të <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Je në programin e subvencionit të <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Regjistrimi i pajisjes"</string>
