--- a/DeviceLockController/res/values-sr/strings.xml
+++ b/DeviceLockController/res/values-sr/strings.xml
@@ -39,7 +39,7 @@
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Долазни и неки одлазни позиви"</string>
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"Подешавања"</string>
     <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;Копије&lt;/a&gt;"</string>
-    <string name="exposure_section_title" msgid="2329122144337528752">"Шта је видљиво за: <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
+    <string name="exposure_section_title" msgid="2329122144337528752">"Шта је видљиво апликацији <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
     <string name="exposure_install_text" msgid="2631074166447765453">"Када се апликација <xliff:g id="CREDITOR_APP">%1$s</xliff:g> инсталира или деинсталира"</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"Сви захтеви за закључавање и откључавање које шаље <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
     <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"Ако апликација <xliff:g id="CREDITOR_APP">%1$s</xliff:g> није доступна"</string>
@@ -60,8 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Информације"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Додељивање"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Региструјте уређај"</string>
-    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
-    <skip />
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Сада можете да региструјете уређај за <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> финансијски програм"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Сада можете да региструјете уређај за <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> програм субвенција"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Укључени сте у <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> програм субвенција"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Регистрација уређаја"</string>
