--- a/DeviceLockController/res/values-sw/strings.xml
+++ b/DeviceLockController/res/values-sw/strings.xml
@@ -39,7 +39,7 @@
     <string name="locked_phone_usage_text" msgid="1913605870324552847">"Simu zinazoingia na baadhi ya simu unazopiga"</string>
     <string name="locked_settings_usage_text" msgid="8336476063187737700">"Mipangilio"</string>
     <string name="locked_backup_and_restore_text" msgid="104616318625243429">"&lt;a href=https://support.google.com/android/answer/2819582&gt;Inahifadhi nakala na kurejesha&lt;/a&gt; data yako"</string>
-    <string name="exposure_section_title" msgid="2329122144337528752">"Ni data ipi inaonekana kwenye <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
+    <string name="exposure_section_title" msgid="2329122144337528752">"Ni data ipi inaonekana kwa <xliff:g id="CREDITOR_APP">%1$s</xliff:g>?"</string>
     <string name="exposure_install_text" msgid="2631074166447765453">"Wakati programu ya <xliff:g id="CREDITOR_APP">%1$s</xliff:g> imesakinishwa au kuondolewa"</string>
     <string name="exposure_lock_unlock_text" msgid="6827412845847260579">"Ombi lolote la kufunga au kufungua kifaa linalotumwa na <xliff:g id="CREDITOR_APP">%1$s</xliff:g>"</string>
     <string name="exposure_disable_dlc_text" msgid="2898692398106736423">"Ikiwa programu ya <xliff:g id="CREDITOR_APP">%1$s</xliff:g> haipatikani"</string>
@@ -60,8 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Maelezo"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Maelezo ya fidia"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Sajili kifaa chako"</string>
-    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
-    <skip />
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Sasa unaweza kusajili kifaa chako kwenye mpango wa ufadhili wa <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Sasa unaweza kusajili kifaa chako kwenye mpango wa ruzuku wa <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"Umesajiliwa kwenye mpango wa ruzuku wa <xliff:g id="PROVIDER_NAME">%1$s</xliff:g>"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Kusajili kifaa"</string>
