--- a/DeviceLockController/res/values-tr/strings.xml
+++ b/DeviceLockController/res/values-tr/strings.xml
@@ -46,10 +46,10 @@
     <string name="open_source_licenses" msgid="6464389386262455443">"Açık kaynak lisansları"</string>
     <string name="footer_notice_content_description" msgid="2160540400079419440">"Güvenlik ayarlarının finanse edilen cihaz bölümündeki yönetim özellikleri bu cihaza uygulanmaz."</string>
     <string name="device_provided_by_provider" msgid="290593329676291991">"Bu cihaz, <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> tarafından sağlanmaktadır"</string>
-    <string name="download_kiosk_app" msgid="1845089944897502656">"Kiosk uygulaması otomatik olarak indirilip yüklenecek"</string>
+    <string name="download_kiosk_app" msgid="1845089944897502656">"Kiosk uygulaması otomatik olarak indirilip yüklenecek."</string>
     <string name="install_kiosk_app_secondary_user" msgid="49911908012320834">"Kiosk uygulaması bu kullanıcı için yüklenecek"</string>
-    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"Bir ödemeyi yapmazsanız <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> bu cihazı kısıtlayabilir"</string>
-    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"Gerekli ödemeleri yapmazsanız <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> bu cihazı kısıtlayabilir. Ayrıntılar için <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Hükümler ve Koşullar<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g> bölümüne bakın."</string>
+    <string name="restrict_device_if_missing_payment" msgid="5721216628714899148">"Bir ödemeyi yapmazsanız <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> bu cihazı kısıtlayabilir."</string>
+    <string name="restrict_device_if_dont_make_payment" msgid="1619095674945507015">"Gerekli ödemeleri yapmazsanız <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> bu cihazı kısıtlayabilir. Ayrıntılar için <xliff:g id="TERMS_AND_CONDITIONS_LINK_START">&lt;a href=%2$s&gt;</xliff:g>Hükümler ve Koşullar<xliff:g id="TERMS_AND_CONDITIONS_LINK_END">&lt;/a&gt;</xliff:g>\'ı inceleyin."</string>
     <string name="restrict_device_if_owner_doesnt_make_payment" msgid="3841412765931627895">"Cihazın sahibi ödeme yapmazsa <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> bu cihazı kısıtlayabilir"</string>
     <string name="previous" msgid="5241891780917802570">"Önceki"</string>
     <string name="next" msgid="8248291863254324326">"Sonraki"</string>
@@ -60,8 +60,7 @@
     <string name="header_icon_content_description" msgid="6069602031334473195">"Bilgi"</string>
     <string name="provision_info_item_icon_content_description" msgid="2306298178610632507">"Provizyon bilgileri"</string>
     <string name="enroll_your_device_header" msgid="2226305405591945098">"Cihazınızı kaydettirin"</string>
-    <!-- no translation found for enroll_your_device_financing_subheader (8810608106273097451) -->
-    <skip />
+    <string name="enroll_your_device_financing_subheader" msgid="8810608106273097451">"Cihazınızı artık <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> finans programına kaydettirebilirsiniz"</string>
     <string name="enroll_your_device_subsidy_subheader" msgid="8598730780370624995">"Cihazınızı artık <xliff:g id="PROVIDER_NAME">%1$s</xliff:g> yardım programına kaydettirebilirsiniz"</string>
     <string name="subsidy_program_header" msgid="2321508488856303554">"<xliff:g id="PROVIDER_NAME">%1$s</xliff:g> yardım programındasınız"</string>
     <string name="device_enrollment_header_text" msgid="5283341102404741658">"Cihaz kaydı"</string>
